rock/tests/compile_fail/if_if.ra
# Error
# NestedIf
start:
    if z if lte mov A B;